Bug 552934 - [Dark theme] Removes themed scrollbar from default dark theme
Themed scrollbar is only used by Windows and IIRC I added it only to the
default dark theme to test it.

--- a/bundles/org.eclipse.ui.themes/css/dark/e4-dark_globalstyle.css
+++ b/bundles/org.eclipse.ui.themes/css/dark/e4-dark_globalstyle.css
@@ -302,24 +302,6 @@ ProgressIndicator#org-eclipse-ui-splash-progressIndicator {
 	background-color: #e1e1e1;
 }
 
-/*
-	 * Default values for using a styled scrollbar to allow a user to set -Dswt.enable.themedScrollBar=true/false to force
-	 * it to true/false regardless of the CSS value.
-	 *
-	 * swt-scrollbar-themed must be present for -Dswt.enable.themedScrollBar to be supported
-	 */
-
-StyledText {
-
-	swt-scrollbar-themed: false;
-
-	swt-scrollbar-background-color: #383838;
-	swt-scrollbar-foreground-color: #494949;
-	swt-scrollbar-width: 4px;
-	swt-scrollbar-border-radius: 4px;
-	swt-scrollbar-mouse-near-scroll-width: 15px;
-}
-
 Link {
 	swt-link-foreground-color: '#org-eclipse-ui-workbench-LINK_COLOR'
 }
